# mailfilter

./: .gitignore  INSTALL  Makefile.am  README  README.md  config.js  configure.ac  dump-schema.sh  mailfilter.conf.default  schema.sql  send_mail.php  test-config.sh  version
conf/: database.js  filter.js  mark.js  proxy.js
extras/: mailfilter.service  mailfilter.sysconfig  spamassassin_user_prefs
src/: Makefile.am  base64.c  base64.h  bfd.c  bfd.h  config.c  config.h  internet_message.c  internet_message.h  js_dns.c  js_dns.h  js_engine.c  js_engine.h  js_main.c  js_main.h  js_smtp.c  js_smtp.h  js_smtpserver.c  js_smtpserver.h  js_sys.c  js_sys.h  list.h  logging.c  logging.h  mailfilter.c  mailfilter.h  mod_clamav.c  mod_dkim.c  mod_dkim.h  mod_extscan.c  mod_extscan.h  mod_log_sql.c  mod_log_sql.h  mod_proxy.c  mod_proxy.h  mod_spamassassin.c  mod_spamassassin.h  mod_spf.c  mod_spf.h  pexec.c  (+10 more)
src/js/: engine.c  engine.h  js.c  js.h  smtp_server.c  smtp_server.h  smtpserver.c  smtpserver.h
test/: send_mail.py  smtp.py  starttls.py
