AM_CFLAGS = -g -Wall -Wstrict-prototypes -Wwrite-strings -O0
AM_LDFLAGS =

bin_PROGRAMS = mailfilter
mailfilter_SOURCES = mailfilter.c config.c logging.c smtp_server.c smtp_client.c mod_proxy.c string_tools.c mod_spamassassin.c mod_clamav.c mod_dkim.c smtp.c internet_message.c base64.c pexec.c bfd.c js/js.c js/engine.c js/smtpserver.c
